--- a/app/src/main/res/menu/main_toolbar_menu.xml
+++ b/app/src/main/res/menu/main_toolbar_menu.xml
@@ -12,11 +12,11 @@
         app:actionViewClass="android.widget.SearchView" />
 
     <item
-        android:id="@+id/app_bar_settings"
+        android:id="@+id/app_bar_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings"
+        android:icon="@drawable/profile"
+        android:title="Profile"
         app:showAsAction="ifRoom" />
 
 </menu>
