send and receive message

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrimaryDark">#1C223C</color>
     <color name="colorAccent">#1C223C</color>
     <color name="colorProfile">#1C223C</color>
+    <color name="colorMain">#6750A3</color>
 </resources>
